added my repo url

--- a/discovery-service/Jenkinsfile
+++ b/discovery-service/Jenkinsfile
@@ -3,10 +3,10 @@ node {
     withMaven(maven:'maven') {
 
         stage('Checkout') {
-            git url: 'https://github.com/piomin/sample-spring-microservices.git', credentialsId: 'github-piomin', branch: 'master'
+            git url: 'https://github.com/sasi-infy/Azure.git', credentialsId: '5bdf415a-60a4-4b47-9947-f4ce7fdf8812	', branch: 'master'
         }
 
-        stage('Build') {
+        stage('MVNBuild') {
             sh 'mvn clean install'
 
             def pom = readMavenPom file:'pom.xml'
@@ -14,14 +14,14 @@ node {
             env.version = pom.version
         }
 
-        stage('Image') {
+        stage('DCKRBuild') {
             dir ('discovery-service') {
                 def app = docker.build "localhost:5000/discovery-service:${env.version}"
                 app.push()
             }
         }
 
-        stage ('Run') {
+        stage ('DCKRRun') {
             docker.image("localhost:5000/discovery-service:${env.version}").run('-p 8761:8761 -h discovery --name discovery')
         }
 
